lintian (2.2.16) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - dh_undocumented-is-obsolete
      - lib-recommends-documentation

  * checks/debhelper{,.desc}:
    + [RA] Check for use of the obsolete dh_undocumented debhelper
      program.  Patch from Raphael Geissert.  (Closes: #541977)
  * checks/fields{,.desc}:
    + [RA] Check for library packages that recommend documentation
      packages.  Patch from Raphael Geissert.  (Closes: #527363)

  * lib/Spelling.pm:
    + [RA] Additional spelling corrections from Raphael Geissert.
    + [RA] Return the count of spelling errors and support suppressing the
      tag by passing undef for the tag name so that the spell checking
      functions can be used to test tag descriptions for spelling errors.
      (Closes: #546641)
  
  * reporting/html_reports:
    + [RA] Include all tag types in the qa-list.txt file instead of just
      errors and warnings.  The new order of columns is errors, warnings,
      info tags, pedantic tags, experimental tags, and overridden tags.

 -- Russ Allbery <rra@debian.org>  Mon, 14 Sep 2009 18:37:26 -0700

lintian (2.2.15) unstable; urgency=low

  The "BTS cleanup" release.

  * Summary of tag changes:
    + Added:
      - build-depends-on-non-build-package
      - desktop-entry-limited-to-environments
      - example-interpreter-in-usr-local (pedantic)
      - example-interpreter-not-absolute
      - example-script-without-interpreter
      - example-script-uses-bin-env
      - example-shell-script-fails-syntax-check (pedantic)
      - example-wrong-path-for-interpreter
      - example-unusual-interpreter (pedantic)
      - global-data-in-games-directory
      - init.d-script-does-not-provide-itself
      - init.d-script-possible-missing-stop
      - init.d-script-provides-virtual-facility
      - init.d-script-should-depend-on-virtual-facility
      - init.d-script-starts-in-stop-runlevel
      - ocaml-custom-executable
  
  * checks/binaries{,.desc}: