@@ -1,0 +1,5 @@
+Testname: control-file-library-dev
+Sequence: 6000
+Version: 1.0
+Description: Check control file handling of library dev packages
+Test-For: weak-library-dev-dependency
